bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:2: error: not found: value a
  if ( ((a<=0)&& (b>=0)) || ( (a>=0)&&(b<=0)) ){
         ^IcyHot:2: error: not found: value b
  if ( ((a<=0)&& (b>=0)) || ( (a>=0)&&(b<=0)) ){
                  ^IcyHot:2: error: not found: value a
  if ( ((a<=0)&& (b>=0)) || ( (a>=0)&&(b<=0)) ){
                               ^IcyHot:2: error: not found: value b
  if ( ((a<=0)&& (b>=0)) || ( (a>=0)&&(b<=0)) ){
                                       ^