bat.bool1.icyhot.IcyHot.scala.code
def icyHot(temp1:Int, temp2: Int): Boolean = {
  if ( ((a<=0)&& (b>=0)) || ( (a>=0)&&(b<=0)) ){
    return true
  }
  return false
}